--- a/css/style.css
+++ b/css/style.css
@@ -173,3 +173,10 @@ font-family:cursive;
 	width:79%;
 	min-height:722px;
 }
+
+#loading{
+	position:fixed;
+	top:50%;
+	left:50%;
+	z-index:1000;
+}
